Fixes to app-2 build and functionality
1. libwebrtc.aar was not present in Step-2
2. Some API calls were incorrect due to changes in Android
3. The app was not actually starting camera capture in Step-2.
4. Signaling IP change. This anyway will need to be changed for each developer.

Version of software built on:
Gradle:       6.0.1
Kotlin:       1.3.50
Groovy:       2.5.8
Ant:          Apache Ant(TM) version 1.10.7 compiled on September 1 2019
JVM:          1.8.0_91 (Oracle Corporation 25.91-b14)